Fixed navbar alignment + main colors changed

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,15 +2,11 @@
   box-sizing: border-box;
 }
 
-body,
-html {
-  padding: 0;
-  margin: 0;
-}
-
 .rootContainer {
-  height: 100vh;
-  width: 100vw;
+  overflow: scroll;
+  height: 100%;
+  width: 100%;
+  padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,6 +19,8 @@ html {
 .formContainer {
   height: auto;
   width: 100%;
+  height: 100%;
+  overflow: scroll;
   max-width: 600px;
   background-color: white;
   padding: 3rem 1rem;
@@ -34,7 +32,7 @@ html {
   display: flex;
   justify-content: space-between;
   gap: 2px;
-  background-color: rgba(0, 0, 0, 0.25);
+  /* background-color: rgba(0, 0, 0, 0.25); */
   border-radius: 12px;
   overflow: hidden;
 }
@@ -44,19 +42,19 @@ html {
   color: white;
   font-size: 1rem;
   height: 47px;
-  background-color: #111111;
+  background-color: var(--secondary);
   cursor: pointer;
   border: none;
 }
 
 .optionButton:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--secondary-40);
 }
 
 .optionButton.active {
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: var(--secondary-40);;
 }
 
 .optionButton.active:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--secondary-30);
 }
